--- a/pom.xml
+++ b/pom.xml
@@ -437,6 +437,16 @@
       <version>1.4.6.RELEASE</version>
       <scope>test</scope>
     </dependency>
+	<dependency>
+	  <groupId>org.jfree</groupId>
+	  <artifactId>jfreechart</artifactId>
+	  <version>1.5.3</version>
+	</dependency>
+	<dependency>
+	  <groupId>org.jfree</groupId>
+	  <artifactId>jfreechart-fx</artifactId>
+	  <version>1.0.1</version>
+	</dependency>
   </dependencies>
   <build>
     <plugins>
